--- a/src/MessageContainer.css
+++ b/src/MessageContainer.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0;
   width: 100%;
   font-size: 0.875rem;
   text-align: center;
